# simple-haskell-book

./: .ghci  .gitignore  README.md  quad.cabal
app/: Main.hs
manage/: repl
src/: Bootstrap.hs  Core.hs  Docker.hs  Runner.hs  Socket.hs
test/: CoreSpec.hs  Main.hs
