cabal-version:      3.0
name:               quad
version:            0
build-type:         Simple


common bed
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:    base ^>=4.17.2.1

library
    import:           bed
    hs-source-dirs:   src
    exposed-modules:  Bootstrap
                    , Docker
                    , Core
    other-modules:    Socket
    build-depends:    text
                    , pretty-simple
                    , bytestring
                    , containers
                    , network
                    , http-client
                    
                    -- provides Network.HTTP.Simple
                    , http-conduit

                    , aeson
                    , twain


executable quad
    import:           bed
    hs-source-dirs:   app
    main-is:          Main.hs
    build-depends:    quad


test-suite quad-test
    import:           bed
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    other-modules:    CoreSpec
    build-tool-depends:
      hspec-discover:hspec-discover
    build-depends:    quad
                    , hspec
                    , hspec-discover
                    , text